--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 		    <track src="captions_en.vtt" kind="captions" srclang="en" label="english_captions">	
 		  		Your browser does not support HTML5 video.
 		</video>
+		<div id="current">0:00</div>
+        <div id="duration">1:07</div>
 		<figcaption>[The Michigan Marching Band]</figcaption>
 		</figure> 
 	<button id="mute">Mute</button><br>
